--- a/main.html
+++ b/main.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
 
-
+<!-- <--This is the body --> 
   <body>
     <header>
       <div class="container">
